--- a/boot.html
+++ b/boot.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/default_style.css">
     <title>Programación Para Todxs</title>
 </head>
-<body>
+<body id="ParentBody">
     <header id="MainHeader">
 
     </header>
