--- a/boot.html
+++ b/boot.html
@@ -15,6 +15,17 @@
     <title>Programación Para Todxs</title>
 </head>
 <body id="ParentBody">
+    <header id="MainHeader">
+
+    </header>
+
+    <main id="MainBody">
+
+    </main>
+
+    <footer id="MainFooter">
+
+    </footer>
     <script src="./js/loadWidgets.js"></script>
 </body>
 </html>
